--- a/Parsec/LispParser.cabal
+++ b/Parsec/LispParser.cabal
@@ -25,7 +25,7 @@ homepage:            https://github.com/totherme/LearningHaskellLibraries
 -- license:             
 
 -- The file containing the license text.
-license-file:        LICENSE
+license-file:        ../LICENSE
 
 -- The package author(s).
 author:              Gareth Smith
@@ -60,7 +60,7 @@ library
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8, parsec >=3.1 && <3.2
+  build-depends:       base >=4.7 && <4.8, parsec >=3.1 && <3.2, QuickCheck
   
   -- Directories containing source files.
   -- hs-source-dirs:      
@@ -68,3 +68,14 @@ library
   -- Base language which the package is written in.
   default-language:    Haskell2010
   
+test-suite ParserTests
+   ghc-options: -Wall
+   default-extensions:  OverloadedStrings
+   type: exitcode-stdio-1.0
+   Hs-source-dirs:    tests
+   Main-is:           ParserTests.hs
+   build-depends:       base,
+                        LispParser,
+                        QuickCheck,
+                        hspec                >= 1.8
+   default-language:    Haskell2010
