The LispParser isn't just about parsec anymore.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /Parsec/dist/
 /Parsec/.cabal-sandbox/
 /Parsec/cabal.sandbox.config
+/LispParser/.cabal-sandbox/*
+/LispParser/dist/*
+/LispParser/cabal.sandbox.config
