--- a/LispParser/LispParser.cabal
+++ b/LispParser/LispParser.cabal
@@ -60,7 +60,7 @@ library
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8, parsec >=3.1 && <3.2, QuickCheck
+  build-depends:       base >=4.7 && <4.8, parsec >=3.1 && <3.2, QuickCheck,smallcheck
   
   -- Directories containing source files.
   -- hs-source-dirs:      
@@ -77,5 +77,5 @@ test-suite ParserTests
    build-depends:       base,
                         LispParser,
                         QuickCheck,
-                        hspec                >= 1.8
+                        smallcheck
    default-language:    Haskell2010
