Added Java practice classes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 *~
 /Bot/bin/org/totherme/bot/BunnyListener.class
 /Bot/old
+/Bot/bin/
+/Bot/dist
+/RandomPlay/bin/org/totherme/play/BinaryTree.class
+/RandomPlay/bin
